syntax = "proto3";
package auth;
option go_package = "simple-micro-auth/proto";

service AuthService {
  rpc CreateAuth (AuthRequest) returns (AuthResponse);
  rpc UpdateAuth (UpdateAuthRequest) returns (AuthResponse);
  rpc DeleteAuth (DeleteAuthRequest) returns (DeleteAuthResponse);
  rpc CompareAuth (AuthRequest) returns (AuthResponse);
  rpc VerifyToken (TokenRequest) returns (AuthResponse);
  rpc RefreshToken (TokenRequest) returns (AuthResponse);
  rpc GetPublicKey (PublicKeyRequest) returns (PublicKeyResponse);
}


// Requests

message AuthRequest {
  int64 id = 1;
  string lookupHash = 2;
  string password = 3;
}

message UpdateAuthRequest {
  int64 id = 1;
  string lookupHash = 2;
  string oldPassword = 3;
  string newPassword = 4;
}

message DeleteAuthRequest {
  string lookupHash = 1;
}

message TokenRequest {
  string token = 1;
}

message PublicKeyRequest {
  string target = 1;
}


// Responses

message AuthResponse {
  int64 id = 1;
  string token = 2;
  string error = 3;
}

message DeleteAuthResponse {
  string error = 1;
}

message PublicKeyResponse {
  bytes publicKey = 1;
}